refactor: migrate database layer from MyBatis-Plus/MySQL to JPA/PostgreSQL