@@ -1,23 +1,19 @@
 package com.keny.jobassistant.controller;
 
-import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
+
 import com.keny.jobassistant.common.BaseResponse;
 import com.keny.jobassistant.common.ErrorCode;
 import com.keny.jobassistant.common.ResultUtils;
 import com.keny.jobassistant.exception.BusinessException;
-import com.keny.jobassistant.model.domain.User;
-import com.keny.jobassistant.model.domain.request.UserLoginRequest;
-import com.keny.jobassistant.model.domain.request.UserRegisterRequest;
+import com.keny.jobassistant.model.entity.User;
+import com.keny.jobassistant.model.entity.request.UserLoginRequest;
+import com.keny.jobassistant.model.entity.request.UserRegisterRequest;
 import com.keny.jobassistant.service.UserService;
 import jakarta.annotation.Resource;
 import jakarta.servlet.http.HttpServletRequest;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.web.bind.annotation.*;
-
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
-
 import static com.keny.jobassistant.constant.UserConstant.ADMIN_ROLE;
 import static com.keny.jobassistant.constant.UserConstant.USER_LOGIN_STATE;
 
@@ -39,7 +35,7 @@ public class UserController {
         String userPassword = userRegisterRequest.getUserPassword();
         String checkPassword = userRegisterRequest.getCheckPassword();
         if (StringUtils.isAnyBlank(userAccount, userPassword, checkPassword)){
-            return null;
+            throw new BusinessException(ErrorCode.PARAMS_ERROR);
         }
         long result = userService.userRegister(userAccount, userPassword, checkPassword);
         //return new BaseResponse<>(0,result,"ok");
@@ -49,12 +45,12 @@ public class UserController {
     @PostMapping("/login")
     public BaseResponse<User> userLogin(@RequestBody UserLoginRequest userLoginRequest, HttpServletRequest request) {
         if (userLoginRequest == null){
-            return null;
+            throw new BusinessException(ErrorCode.PARAMS_ERROR);
         }
         String userAccount = userLoginRequest.getUserAccount();
         String userPassword = userLoginRequest.getUserPassword();
         if (StringUtils.isAnyBlank(userAccount, userPassword)){
-            return null;
+            throw new BusinessException(ErrorCode.PARAMS_ERROR);
         }
         User user = userService.userLogin(userAccount, userPassword, request);
         return ResultUtils.success(user);
@@ -73,17 +69,13 @@ public class UserController {
     @GetMapping("/search")
     public BaseResponse<List<User>> searchUser(String username, HttpServletRequest request){
         if (!isAdmin(request)){
-            return ResultUtils.success(new ArrayList<>());
+            throw new BusinessException(ErrorCode.NO_AUTH);
         }
-        QueryWrapper<User> queryWrapper = new QueryWrapper<>();
-        if (StringUtils.isNotBlank(username)){
-            queryWrapper.like("username", username);
-        }
-        List<User> userList = userService.list(queryWrapper);//模糊查询
-        List<User> result = userList.stream().map(user -> {
-            user.setUserPassword(null);
-            return userService.getSafetyUser(user);
-        }).collect(Collectors.toList());
+        List<User> userList = userService.searchUser(username);
+
+        List<User> result = userList.stream()
+                        .map(user -> userService.getSafetyUser(user))
+                        .toList();
         return ResultUtils.success(result);
     }
 
@@ -92,9 +84,9 @@ public class UserController {
         if (!isAdmin(request)){
             throw new BusinessException(ErrorCode.NO_AUTH);}
         if (id<=0){
-            return null;
+            throw new BusinessException(ErrorCode.PARAMS_ERROR);
         }
-        boolean result = userService.removeById(id);
+        boolean result = userService.deleteUser(id);
         return ResultUtils.success(result);
 
     }
